# mgsim

./: .gitignore  Allocator.cpp  Allocator.h  BankedMemory.cpp  BankedMemory.h  DCache.cpp  DCache.h  DecodeStage.cpp  ExecuteStage.cpp  FPU.cpp  FPU.h  FamilyTable.cpp  FamilyTable.h  FetchStage.cpp  ICache.cpp  ICache.h  ISA.alpha.cpp  ISA.cpp  ISA.h  ISA.sparc.cpp  LICENSE  Makefile  Makefile.am  Makefile.cacti.inc  Makefile.inc  Makefile.orig  Memory.h  MemoryStage.cpp  Network.cpp  Network.h  ParallelMemory.cpp  ParallelMemory.h  Pipeline.cpp  Pipeline.h  Processor.cpp  Processor.h  RAUnit.cpp  RAUnit.h  ReadStage.cpp  RegisterFile.cpp  (+31 more)
arch/: Archures.h  BankSelector.cpp  BankSelector.h  FPU.cpp  FPU.h  IOBus.cpp  IOBus.h  IOMessageInterface.cpp  IOMessageInterface.h  Interconnect.h  Interconnect.hpp  MGSystem.cpp  MGSystem.h  MMIO.cpp  MMIO.h  Makefile.am  Makefile.inc  Memory.cpp  Memory.h  VirtualMemory.cpp  VirtualMemory.h  area.cpp  elf.h  loader.cpp  simtypes.cpp  simtypes.h  symtable.cpp  symtable.h
arch/dev/: ActiveROM.cpp  ActiveROM.h  Display.cpp  Display.h  DisplayDraw.cpp  ELF.h  ELFLoader.cpp  ELFLoader.h  IODeviceDatabase.cpp  IODeviceDatabase.h  LCD.cpp  LCD.h  NullIO.cpp  NullIO.h  RPC.cpp  RPC.h  RPC.p.h  RPCServiceDatabase.h  RPC_unix.cpp  RPC_unix.h  RTC.cpp  RTC.h  SMC.cpp  SMC.h  Selector.cpp  Selector.h  UART.cpp  UART.h  UnbufferedCrossbar.cpp  UnbufferedCrossbar.h  lcd.cpp  lcd.h  lineprinter.cpp  lineprinter.h  sdl_wrappers.h
arch/drisc/: ActionInterface.cpp  ActionInterface.h  Allocator.cpp  Allocator.h  Allocator.p.h  AncillaryRegisterFile.cpp  AncillaryRegisterFile.h  DCache.cpp  DCache.h  DCache.p.h  DRISC.cpp  DRISC.h  DebugChannel.cpp  DebugChannel.h  DecodeStage.cpp  DummyStage.cpp  ExecuteStage.cpp  FamilyTable.cpp  FamilyTable.h  FetchStage.cpp  ICache.cpp  ICache.h  IOBusInterface.cpp  IOBusInterface.h  IOBusInterface.p.h  IODirectCacheAccess.cpp  IODirectCacheAccess.h  IODirectCacheAccess.p.h  IOInterface.cpp  IOInterface.h  IOMatchUnit.cpp  IOMatchUnit.h  IONotificationMultiplexer.cpp  IONotificationMultiplexer.h  IOResponseMultiplexer.cpp  IOResponseMultiplexer.h  IOResponseMultiplexer.p.h  ISA.cpp  ISA.mips.cpp  ISA.mips.h  (+25 more)
arch/ic/: Bus.h  Crossbar.h  DestinationBuffering.h  EndPointArbiter.h  EndPointRegistry.h  SharedMedium.h  SourceBuffering.h  WireNet.h
arch/mem/: BankedMemory.cpp  BankedMemory.h  BankedMemory.p.h  DDR.cpp  DDR.h  DDR.p.h  DDRMemory.cpp  DDRMemory.h  DDRMemory.p.h  ParallelMemory.cpp  ParallelMemory.h  ParallelMemory.p.h  RandomBankedMemory.cpp  RandomBankedMemory.h  SerialMemory.cpp  SerialMemory.h  SerialMemory.p.h
arch/mem/cdma/: CDMA.cpp  CDMA.h  Cache.cpp  Cache.h  Cache.p.h  Directory.cpp  Directory.h  Node.cpp  Node.h  RootDirectory.cpp  (+1 more)
arch/proc/: ActionInterface.cpp  ActionInterface.h  Allocator.cpp  Allocator.h  AncillaryRegisterFile.cpp  AncillaryRegisterFile.h  DCache.cpp  DCache.h  DRISC.cpp  DRISC.h  DebugChannel.cpp  DebugChannel.h  DecodeStage.cpp  DummyStage.cpp  ExecuteStage.cpp  FamilyTable.cpp  FamilyTable.h  FetchStage.cpp  ICache.cpp  ICache.h  IOBusInterface.cpp  IOBusInterface.h  IODirectCacheAccess.cpp  IODirectCacheAccess.h  IOInterface.cpp  IOInterface.h  IOInterruptMultiplexer.cpp  IOInterruptMultiplexer.h  IOMatchUnit.cpp  IOMatchUnit.h  IONotificationMultiplexer.cpp  IONotificationMultiplexer.h  IOResponseMultiplexer.cpp  IOResponseMultiplexer.h  ISA.alpha.cpp  ISA.cpp  ISA.mips.cpp  ISA.mips.h  ISA.mtalpha.cpp  ISA.mtalpha.h  (+24 more)
cli/: Makefile.am  Makefile.inc  aliases.cpp  cmd_breakpoint.cpp  cmd_component.cpp  cmd_misc.cpp  cmd_show.cpp  cmd_sim.cpp  cmd_trace.cpp  commandline.cpp  commands.cpp  commands.h  lookup.cpp  main.cpp  print_exception.cpp  simreadline.cpp  simreadline.h  stepsystem.cpp  tables.cpp  usageversion.cpp
doc/: AUTHORS  Makefile.am  NEWS  README  README.txt  architecture.graffle  checkpointing.rst  core-interfaces.rst  dev-arom.txt  dev-gfx.txt  dev-lcd.txt  dev-rtc.txt  dev-uart.txt  isa-spec.tex  mgsim-control.rst  mgsim-memranges.rst  mgsim-perfcounters.rst  mgsimdev-arom.rst  mgsimdev-gfx.rst  mgsimdev-lcd.rst  mgsimdev-rpc.rst  mgsimdev-rtc.rst  mgsimdev-smc.rst  mgsimdev-uart.rst  mgsimdoc.rst
doc/arch/: ISA.tex  MGDoc.bib  MGDoc.tcp  MGDoc.tex  creation.tex  dataflow.tex  dcache.tex  familytable.tex  icache.tex  introduction.tex  io.tex  memory.tex  overview.tex  registers.tex  scheduler.tex  threadtable.tex
doc/sparc-isa-change/: change.bib  change.tcp  change.tex
programs/mtalpha/: Makefile.am
programs/mtsparc/: Makefile.am
sim/: Makefile.am  Makefile.inc  arbitrator.cpp  arbitrator.h  arbitrator.hpp  binarysampler.cpp  binarysampler.h  breakpoints.cpp  breakpoints.h  buffer.h  buffer.hpp  clock.cpp  clock.h  clock.hpp  config.cpp  config.h  configmap.cpp  configmap.h  configparser.cpp  configparser.h  convertval.cpp  convertval.h  ctz.h  delegate.h  delegate_closure.h  display.h  except.cpp  except.h  flag.cpp  flag.h  flag.hpp  getclassname.cpp  getclassname.h  inputconfig.cpp  inputconfig.h  inspect.cpp  inspect.h  kernel.cpp  kernel.h  linkedlist.h  (+42 more)
src/: Allocator.cpp  Allocator.h  BankedMemory.cpp  BankedMemory.h  CMLink.cpp  CMLink.h  DCache.cpp  DCache.h  DecodeStage.cpp  DummyStage.cpp  ExecuteStage.cpp  FPU.cpp  FPU.h  FamilyTable.cpp  FamilyTable.h  FetchStage.cpp  ICache.cpp  ICache.h  ISA.alpha.cpp  ISA.alpha.h  ISA.sparc.cpp  ISA.sparc.h  IdealMemory.cpp  IdealMemory.h  MGSystem.cpp  MGSystem.h  MMIO.cpp  MMIO.h  Makefile.am  Memory.h  MemoryStage.cpp  Network.cpp  Network.h  ParallelMemory.cpp  ParallelMemory.h  Pipeline.cpp  Pipeline.h  Processor.cpp  Processor.h  RAUnit.cpp  (+68 more)
src/coma/: COMA.cpp  COMA.h  Cache.cpp  Cache.h  DDR.cpp  DDR.h  Directory.cpp  Directory.h  Makefile.am  Node.cpp  Node.h  README_DDR.txt  RootDirectory.cpp  RootDirectory.h  ZLCOMA.cpp  ZLCOMA.h
src/zlcoma/: COMA.cpp  COMA.h  Cache.cpp  Cache.h  DDR.cpp  Directory.cpp  Directory.h  Node.cpp  Node.h  RootDirectory.cpp  RootDirectory.h
tools/: Makefile.am  aslink.in  compile.in  preproc.in  readtrace.in  runtest.sh  timeout  viewlog.in
(+406 files in other folders)
